# dejector

./: .gitignore  LICENSE  PLAN.md  README.md  dejector_cli.py  dejector_core.py  dejector_gmail.py  dejector_install.py  generate_test_corpus.py  pyproject.toml  requirements.txt  test_corpus.py  test_harness.py  threshold_sweep.py
clawhub-skill/: SKILL.md  _meta.json
dejector/: __init__.py  cli.py  gmail.py  install.py
tests/: corpus-manifest.json
tests/documents/: injected_01_obvious_guide.md  injected_02_obvious_readme.md  injected_03_moderate_changelog.md  injected_04_moderate_contribution.md  injected_05_subtle_config_guide.md  injected_06_subtle_creative.md  legit_01_artist_statement.md  legit_02_project_brief.md  legit_03_meeting_notes.md  legit_04_tutorial.md  legit_05_api_reference.md
tests/emails/: injected_01_obvious_ignore.txt  injected_02_obvious_override.txt  injected_03_obvious_dan.txt  injected_04_moderate_signature.txt  injected_05_moderate_social_eng.txt  injected_06_moderate_hidden.txt  injected_07_subtle_casual.txt  injected_08_subtle_newsletter.txt  injected_09_subtle_unicode.txt  injected_10_subtle_multilayer.txt  legit_01_commission.txt  legit_02_supplier.txt  legit_03_newsletter.txt  legit_04_client_feedback.txt  legit_05_art_contest.txt  legit_06_invoice.txt  legit_07_technical.txt  legit_08_invitation.txt
